--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ tmp/
 *.swp
 *~.nib
 local.properties
+.settings/
 .loadpath
 .recommenders
 pom.properties
 MANIFEST.MF
-.project
 
 # External tool builders
 .externalToolBuilders/
